Update footer style to prevent viewport overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -409,8 +409,7 @@ body {
     }
   }
   footer {
-    width: 100%;
-    display: inline-block;
+    display: block;
     font-size: .8em;
     color: #5D5D5D;
     height: 30%;
